Since 1.4:
 - New: CUDA support in Python and MATLAB interfaces.
 - Changed: SSE kernel is deprecated.
 - Fixed: Code compiles again with the hybrid kernel.

Version 1.4: 2015-10-25
 - New: CPU kernel implements the Gross-Pitaevskii equation.
 - New: performing imaginary time evolution, all kernels output a wave function normalized with a set value provided as input.
 - New: The command-line interface, and the Python and MATLAB wrappers only need Hamiltonian parameters, lattice parameters and evolution parameters as input.
 - New: Sphinx documentation for the Python wrapper, including examples.
 - Changed: Example of MATLAB wrapper.
 - Fixed: Python 3 compatibility.
 - Fixed: MAC OS X can compile, but it does not support SSE kernel.

Version 1.3: 2015-07-04
 - New: Wrappers for Python and MATLAB.
 - New: Compiles on Windows with Visual Studio.
 - Changed: Code compiles without MPI.
 - Fixed: No single process has to hold the entire state or potential in memory.

Version 1.2: 2015-06-08

 - New: Imaginary time evolution to find ground state.
 - New: Periodic boundary conditions are possible.
 - New: Arbitrary stationary potential function can be defined.
 - New: CLI for specifying the files of the initial state and the potential,
        and the parameters of the Hamiltonian.
 - New: API added through the `trotter` function.
 - New: Convenience function to get expectation values (`expect_values`).
 - New: Unit testing framework.
 - Changed: Single-precision calculations were removed entirely.
 - Changed: Examples split into separate folder.
 - Changed: Better testing of MPI dependencies by configure script.
 - Changed: Improved treatment of Intel compilers.
 
Version 1.1: 2014-06-12

 - New: Build system revised, CUDA is no longer necessary.
 
Version 1.0: 2012-06-28

 - Initial release.