@@ -1,6 +1,7 @@
 Since 1.4:
  - New: CUDA support in Python and MATLAB interfaces.
- - Changed: SSE kernel is deprecated.
+ - Changed: SSE kernel is removed.
+ - Changed: More robust compilation of CUDA version in the Python wrapper.
  - Fixed: Code compiles again with the hybrid kernel.
 
 Version 1.4: 2015-10-25
